<resources>
    <string name="app_name">AppGithubUsers</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_user_login">login</string>
    <string name="subtitle_id">id</string>
    <string name="check_network_msg">Check your network connection</string>
    <string name="retry">Retry</string>
    <string name="try_again">Oppps! please try again!</string>
    <string name="more_than_three_repo">More than three repo</string>
    <string name="less_than_three_repo">Less than three repo</string>
    <string name="account_creation_date">account creation date</string>
    <string name="number_of_followers">number of followers</string>
    <string name="organization">organization</string>
    <string name="email">email</string>
    <string name="name">name</string>
</resources>