<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_user"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <TextView
        android:id="@+id/txtMoreThenThree"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:text="@string/more_than_three_repo"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtMoreThenThree"
        tools:srcCompat="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="10dp"
        android:text="@string/name"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/imgAvatar"
        app:layout_constraintTop_toTopOf="@+id/imgAvatar" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/imgAvatar"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <TextView
        android:id="@+id/txtOrganization"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/organization"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/imgAvatar"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <TextView
        android:id="@+id/txtFollowers"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/number_of_followers"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/imgAvatar"
        app:layout_constraintTop_toBottomOf="@+id/txtOrganization" />

    <TextView
        android:id="@+id/txtAccountCreationDate"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/account_creation_date"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/imgAvatar"
        app:layout_constraintTop_toBottomOf="@+id/txtFollowers" />

    <ProgressBar
        android:id="@+id/loadingPb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>